<resources>
    <string name="app_name">LIKE_APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Inicio">Inicio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Tambo">Tambo</string>
    <string name="Cat_Minimarketing">Minimarketing</string>
    <string name="TiempoE_Tambo">45-65 min - Envío S/3.5</string>
    <string name="Ir">Ir</string>

    <string name="AtencionCliente">Atencion al cliente</string>


    <string name="butAcerPagos">Acerca de pagos</string>
    <string name="butAcerPed">Acerca de pedidos</string>
    <string name="butAcerPerf">Acerca de mi perfil</string>
    <string name="butAcerEntr">Acerca de entregas</string>
    <string name="butAcerPrecios">Acerca de precios</string>

    <string name="textAtenC">Atención al cliente</string>


    <!--   PARTE ISABELLA           -->

    <string name="inicio">Inicio</string>
    <string name="vuelve_a_la">Vuelve a la ventana de inicio</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="hint_brand_name">Nombre de la Marca</string>
    <string name="button_register">Registrar</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_surname">Apellido</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_address">Dirección</string>
    <string name="hint_address_reference">Referencia de Dirección</string>
    <!--   PARTE LUIS          -->
    <string name="title_inicio">Inicio</string>
    <string name="title_servicios">Nuestros servicios</string>


    <!--   PARTE LUIS           -->

    <!-- PARA LISTA RESTAURANTE -->
    <string name="buscar">
        Buscar</string>

    <string name="titleFragmentRest">Restaurantes</string>
    <string name="titleRest">Titulo de prueba</string>
    <string name="infoRest">Info de prueba</string>
    <string name="filtroPolleria">Polleria</string>
    <string name="filtroPizza">Pizza</string>
    <string name="filtroChifa">Chifa</string>
    <string name="gestionlblmenu">Menus</string>
    <string name="gestionlblordenes">Mis Ordenes</string>
    <string name="gestionlblnotificaciones">Notificaciones</string>

    <string name="categorias_">Registra tus categorias</string>

    <string name="lblItemMenu1">Menu 1</string>
    <string name="lblItemMenu2">Menu 2</string>
    <string name="lblItemMenu3">Menu 3</string>
    <string name="lblItemMenu4">Menu 4</string>

    <string name="crea_o_modi">
Crea o modifica las categorias menus
</string>
    <string-array name="listCategorias">
        <item> </item>
        <item>Entradas</item>
        <item>Plato Principal</item>
        <item>Postres</item>
    </string-array>

    <style name="title_rest">
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">#000000</item>
    </style>

    <style name="categorias_">
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">#000000</item>
    </style>
    <!-- styles.xml -->
    <style name="crea_o_modi">
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">#9FA4AB</item>
    </style>
    <!-- strings.xml -->


    <string name="valtxtcredito">Añadir tarjeta de credito</string>
    <string name="valtxtdebito">Añadir tarjeta de debito</string>
    <string name="valtxtdeposito">Pagar con deposito a cuenta</string>
    <string name="valbtnpagar">Ir a pagar</string>
    <string name="valtvtarjetauso">Tarjeta en uso</string>
    <string name="valhintnotarjeta">Sin tarjeta añadida</string>
    <string name="valtvaddcard">Ingresa los datos de tu tarjeta</string>
    <string name="valhnumcard">xxxx-xxxx-xx-xxxxxxxxxx</string>
    <string name="valhetmes">Junio(Mes de vencimineto)</string>
    <string name="valhetanio">2999(Año de vencimiento)</string>
    <string name="valhetCVV">CVV</string>
    <string name="valbtnsave">Guardar</string>
    <string name="valtvcddeposito">Cuenta a depositar</string>
    <string name="valcardpagar">xxxx-xxxx-xx-xxxxxxxxxx</string>
    <string name="valtvsubir">Subir comprobante</string>
    <string name="valbtnsubir">Subir archivo(.jpg)</string>
    <string name="valtvsubtotal">Subtotal</string>
    <string name="valtvcargo">Cargo por envio</string>
    <string name="valtvtotal">Total</string>
    <string name="valbtnconf">Confirmar pago</string>
    <string name="tvnorden">Numero de orden</string>
    <string name="valtvproveedor">Datos de proveedor</string>
    <string name="valtvcliente">Datos del cliente</string>
    <string name="valtvmoto">Datos del motorizado</string>
    <string name="valbtnverestado">Ver estado de entrega</string>
    <string name="valtvestadoentrega">Estado de entrega</string>
    <string name="valbtnmap">Seguir en mapa</string>
    <string name="valbtnhome">HOME</string>
    <string name="btnOpiniones">Opiniones</string>
    <string name="valpregFrec">Preguntas Frecuentes</string>
    <string name="valatenClient">Atencion al cliente</string>
    <string name="valgestionRest">Gestion Restaurantes</string>
    <string name="vallistRest">Lista Restaurantes</string>
    <string name="vallistRestFrag">lista restaurantes fragment</string>
    <string name="vallistTienda">Lista de Tiendas</string>
    <string name="valchkDepo">Validacion de deposito</string>
    <string name="valbtnDetalle">Ver Orden</string>
    <string name="valetEmail">Correo</string>
    <string name="valetPassword">Password</string>
    <string name="nombrePlato">Ingresa nombre del plato</string>
    <string name="tvRegistroMenu">Agrega items a tus categorias</string>
    <string name="btnModifCate">Modificar</string>
    <string name="etImgMenu">Url DE LA IMAGEN</string>
    <string name="title_activity_restaurante">RestauranteActivity</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="addToCart">Agrega al carrito</string>
    <string name="loremp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dignissim, arcu vitae volutpat semper, libero orci condimentum felis, vel iaculis nibh diam non est. Cras maximus felis quis mi aliquam gravida. Nulla dignissim hendrerit nulla, ut cursus purus commodo sit amet. Phasellus non nulla sem.</string>
    <string name="labelPrecio">Precio</string>
    <string name="subTotalItemsCart">Sub Total Items</string>
    <string name="DeliveryPrecio">Delivery Precio</string>
    <string name="TotalPrecio">Total Precio</string>
    <string name="btnPagar" />

    !-- PARA BOTONES-->

    <style name="ShapeAppearanceOverlay.MyApp.Button.Rounded" parent="">
        <item name="cornerFamily">rounded</item>
        <item name="cornerSize">50%</item>
    </style>

    <string name="default_web_client_id">AIzaSyB2FlHUE2IvWFhJL4Bo8eeJTqWXy-UtmaY</string>
    <string name="LoginActivity">LoginActivity</string>
    <string name="hintPrecioGestMenu">Ingrese precio del item</string>
    <string name="hintDescripMenu">Ingrese la Descripción</string>
    <string name="lblAgregaCateGestionMenu">Selecciona a que categoria agregar el item</string>
    <string name="textTitlteModifItem">Modificar Item</string>

</resources>