<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvdeposito"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/valtvcddeposito"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvnumcard"
        android:layout_width="380dp"
        android:layout_height="90dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/rectangle1"
        android:paddingTop="20dp"
        android:text="@string/valcardpagar"
        android:textAlignment="center"
        android:textColor="#AFAFAF"
        android:textSize="34sp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="baseline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdeposito" />

    <TextView
        android:id="@+id/textView4"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/valtvsubir"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvnumcard" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:backgroundTint="#FF2DB78C"
        android:text="@string/valbtnsubir"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="624dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="621dp"
        android:layout_height="225dp"
        android:layout_marginTop="824dp"
        android:background="@drawable/containerbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="117dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/valtvsubtotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="118dp"
            android:layout_height="18dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/valtvcargo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="119dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:text="@string/valtvtotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="44dp"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:backgroundTint="#FF2DB78C"
        android:text="@string/valbtnconf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>