<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.like_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.like_app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.like_app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/frag_estab"
        android:name="com.example.like_app.ui.fragmen.List_Rest_Fragment"
        android:label="@string/Inicio"
        tools:layout="@layout/fragment_list__rest_" />

    <fragment
        android:id="@+id/frag_pregFrec"
        android:name="com.example.like_app.ui.fragmen.PregFrecFragment"
        android:label="@string/textAtenC"
        tools:layout="@layout/fragment_preg_frec" />

    <fragment
        android:id="@+id/frag_atenC"
        android:name="com.example.like_app.ui.fragmen.AtenClientFragment"
        android:label="@string/textAtenC"
        tools:layout="@layout/fragment_aten_client" />
    <fragment
        android:id="@+id/gestionMenus"
        android:name="com.example.like_app.ui.Gestion.GestionMenus"
        android:label="fragment_gestion_menu"
        tools:layout="@layout/fragment_gestion_menu" />
    <fragment
        android:id="@+id/listaRestaurantes"
        android:name="com.example.like_app.ui.servicios.ListaRestaurantes"
        android:label="fragment_lista_restaurantes"
        tools:layout="@layout/fragment_lista_restaurantes" />
    <fragment
        android:id="@+id/gestionRestaurante"
        android:name="com.example.like_app.ui.Gestion.GestionRestaurante"
        android:label="fragment_gestion_restaurantes"
        tools:layout="@layout/fragment_gestion_restaurantes" />
    <fragment
        android:id="@+id/notificaciones"
        android:name="com.example.like_app.ui.servicios.Notificaciones"
        android:label="fragment_notificaciones"
        tools:layout="@layout/fragment_notificaciones" />
    <fragment
        android:id="@+id/fragmet_login"
        android:name="com.example.like_app.ui.users.fragmet_login"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/listaTiendas2"
        android:name="com.example.like_app.ui.servicios.ListaTiendas"
        android:label="fragment_lista_tiendas"
        tools:layout="@layout/fragment_lista_tiendas" />


</navigation>