<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp">


  <ImageView
      android:id="@+id/imageEstab"
      android:layout_width="187dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      tools:srcCompat="@tools:sample/avatars" />

  <LinearLayout
      android:layout_width="180dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="vertical"
      android:padding="5dp">

    <TextView
        android:id="@+id/text1Estab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/Tambo" />

    <TextView
        android:id="@+id/text2Estab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        tools:text="@string/Cat_Minimarketing" />

    <TextView
        android:id="@+id/text3Estab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        tools:text="@string/TiempoE_Tambo" />
  </LinearLayout>

</LinearLayout>